--- a/appsettings.json
+++ b/appsettings.json
@@ -14,7 +14,7 @@
         "CookieName": "VerifyAddress",
         "HyperSyncQueryUrl": "https://monad-testnet.hypersync.xyz/query",
         "AlternativeHyperSyncQueryUrl": "https://10143.hypersync.xyz/query",
-        "MonadRpcUrl": "https://testnet-rpc.monad.xyz",
+        "MonadRpcUrl": "https://monad-testnet.hypersync.xyz",
         "ContractAddress": "0x3D5d3E9F7d8096F6c21648c6d8117aC91b9C2921"
     }
 }
