--- a/appsettings.json
+++ b/appsettings.json
@@ -15,6 +15,8 @@
         "HyperSyncQueryUrl": "https://monad-testnet.hypersync.xyz/query",
         "AlternativeHyperSyncQueryUrl": "https://10143.hypersync.xyz/query",
         "MonadRpcUrl": "https://monad-testnet.hypersync.xyz",
-        "ContractAddress": "0x7D8b883A19EF765b6dbbf96AF84953885f8753B8"
+        "ContractAddress": "0x7D8b883A19EF765b6dbbf96AF84953885f8753B8",
+        "MagicEdenUserTokens": "https://api-mainnet.magiceden.dev/v3/rtp/monad-testnet/users/{userAddress}/tokens/v7",
+        "MagicEdenTokensMetadata": "https://api-mainnet.magiceden.dev/v3/rtp/monad-testnet/tokens/v6"
     }
 }
