--- a/MonadNftMarket.csproj
+++ b/MonadNftMarket.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Nethereum.Web3" Version="5.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Polly" Version="8.6.3" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
   </ItemGroup>
