--- a/MonadNftMarket.csproj
+++ b/MonadNftMarket.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Polly" Version="8.6.3" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.7" />
   </ItemGroup>
 
   <ItemGroup>
