--- a/compose.yaml
+++ b/compose.yaml
@@ -22,6 +22,10 @@ services:
     image: monad-nft-market-frontend
     ports:
       - "3000:3000"
+    secrets:
+      - market_api_url
+      - market_ws_url
+      - market_contract_address
     networks:
       - monad_nft_market_net
     deploy:
@@ -79,6 +83,12 @@ secrets:
   postgres_connection_string:
     external: true
   jwt_token_secret:
+    external: true
+  market_api_url:
+    external: true
+  market_contract_address:
+    external: true
+  market_ws_url:
     external: true
     
 networks:
