--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,8 @@ services:
       replicas: 1
       restart_policy:
         condition: on-failure
+    depends_on:
+      - db
     secrets:
       - postgres_connection_string
       - jwt_token_secret
@@ -46,6 +48,8 @@ services:
       - pgdata:/var/lib/postgresql/data
     secrets:
       - db_password
+    networks:
+      - monad_nft_market_net
   
   nginx:
     image: nginx:stable-alpine
